fail_crate/tests/empty_rename_on_struct.rs
use inew::New;

#[derive(New)]
#[new(rename = "")]
struct A;

fn main() {}
